<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_venue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nellymincheva.indoorpositioningsystem.AddVenueActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:background="@color/colorPrimary"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.nellymincheva.indoorpositioningsystem.MainActivity">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:weightSum="1">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:key="@string/pref_room_width"
                            android:inputType="numberDecimal"
                            android:defaultValue="@string/pref_room_width_default"
                            android:hint="@string/room_width" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:key="@string/pref_room_height"
                            android:inputType="numberDecimal"
                            android:defaultValue="@string/pref_room_height_default"
                            android:hint="@string/room_height" />


                <Button
                    android:text="Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/addVenueWithDimentions" />

                <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:key="@string/pref_grid_size"
                            android:inputType="numberDecimal"
                            android:defaultValue="@string/pref_grid_size_default"
                            android:hint="@string/grid_size" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:key="@string/pref_beacon_1_mac"
                            android:inputType="text"
                            android:defaultValue="@string/pref_beacon_1_mac_default"
                            android:hint="@string/beacon_1_mac" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:key="@string/pref_beacon_1_x"
                            android:inputType="numberDecimal"
                            android:defaultValue="@string/pref_beacon_1_x_default"
                            android:hint="@string/beacon_1_x" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:key="@string/pref_beacon_1_y"
                            android:inputType="numberDecimal"
                            android:defaultValue="@string/pref_beacon_1_y_default"
                            android:hint="@string/beacon_1_y" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:key="@string/pref_beacon_2_mac"
                            android:inputType="text"
                            android:defaultValue="@string/pref_beacon_2_mac_default"
                            android:hint="@string/beacon_2_mac" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:key="@string/pref_beacon_2_x"
                            android:inputType="numberDecimal"
                            android:defaultValue="@string/pref_beacon_2_x_default"
                            android:hint="@string/beacon_2_x" />

                <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:key="@string/pref_beacon_2_y"
                            android:inputType="numberDecimal"
                            android:defaultValue="@string/pref_beacon_2_y_default"
                            android:hint="@string/beacon_2_y" />


                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:key="@string/pref_beacon_3_mac"
                            android:inputType="text"
                            android:defaultValue="@string/pref_beacon_3_mac_default"
                            android:hint="@string/beacon_3_mac" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:key="@string/pref_beacon_3_x"
                            android:inputType="numberDecimal"
                            android:defaultValue="@string/pref_beacon_3_x_default"
                            android:hint="@string/beacon_3_x" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:key="@string/pref_beacon_3_y"
                            android:inputType="numberDecimal"
                            android:defaultValue="@string/pref_beacon_3_y_default"
                            android:hint="@string/beacon_3_y" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:key="@string/pref_beacon_4_mac"
                            android:inputType="text"
                            android:defaultValue="@string/pref_beacon_4_mac_default"
                            android:hint="@string/beacon_4_mac" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:key="@string/pref_beacon_4_x"
                            android:inputType="numberDecimal"
                            android:defaultValue="@string/pref_beacon_4_x_default"
                            android:hint="@string/beacon_4_x" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:key="@string/pref_beacon_4_y"
                            android:inputType="numberDecimal"
                            android:defaultValue="@string/pref_beacon_4_y_default"
                            android:hint="@string/beacon_4_y" />
            </LinearLayout>

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>
