<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context="com.nellymincheva.indoorpositioningsystem.MainActivity" >
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_change_map"
        android:title="@string/action_change_map"
        android:orderInCategory="200"
        app:showAsAction="never" />
    <item android:id="@+id/action_login"
        android:title="@string/action_login"
        android:orderInCategory="200"
        app:showAsAction="never" />
    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="200"
        app:showAsAction="never" />
</menu>